[gd_scene load_steps=2 format=2]

[ext_resource path="res://Prototype/Buzzes/Buzz.gd" type="Script" id=1]

[node name="Buzz" type="Panel"]
margin_right = 816.0
margin_bottom = 35.0
rect_min_size = Vector2( 0, 35 )
focus_mode = 2
mouse_filter = 1
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.08
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 2

[node name="User" type="Label" parent="HBoxContainer"]
margin_right = 87.0
margin_bottom = 35.0
focus_mode = 2
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
text = "User"
align = 1
valign = 1
autowrap = true

[node name="BuzzText" type="Label" parent="HBoxContainer"]
margin_left = 91.0
margin_right = 526.0
margin_bottom = 35.0
focus_mode = 2
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0
text = "This is the Text from a given Buzz"
align = 1
valign = 1
autowrap = true

[node name="TimeRemaining" type="Label" parent="HBoxContainer"]
margin_left = 530.0
margin_top = 10.0
margin_right = 633.0
margin_bottom = 24.0
focus_mode = 2
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Time Remaining"
align = 1

[node name="Timer" type="Timer" parent="HBoxContainer/TimeRemaining"]
autostart = true

[node name="ExtendButton" type="Button" parent="HBoxContainer"]
margin_left = 637.0
margin_right = 724.0
margin_bottom = 35.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Boost"

[node name="Comments" type="Button" parent="HBoxContainer"]
margin_left = 728.0
margin_right = 816.0
margin_bottom = 35.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
text = "Comments"

[node name="CommentsSection" type="ScrollContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 35.0
margin_bottom = 386.0
rect_min_size = Vector2( 0, 35 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CommentsSection"]
margin_right = 816.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="BuzzBack" type="HBoxContainer" parent="CommentsSection/VBoxContainer"]
margin_right = 816.0
margin_bottom = 20.0
focus_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BuzzBack" type="Button" parent="CommentsSection/VBoxContainer/BuzzBack"]
margin_right = 816.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Leave a Comment"

[node name="LeaveAComment" type="WindowDialog" parent="CommentsSection/VBoxContainer"]
margin_top = 24.0
margin_right = 816.0
margin_bottom = 84.0
rect_min_size = Vector2( 0, 60 )
size_flags_horizontal = 3
size_flags_vertical = 0
window_title = "Leave a Comment"

[node name="CommentTextEntry" type="LineEdit" parent="CommentsSection/VBoxContainer/LeaveAComment"]
anchor_right = 1.0
anchor_bottom = 1.0
placeholder_text = "Write your Comment Here"

[node name="Submit" type="Button" parent="CommentsSection/VBoxContainer/LeaveAComment"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -101.0
margin_bottom = 30.0
text = "Submit"

[node name="Cancel" type="Button" parent="CommentsSection/VBoxContainer/LeaveAComment"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -205.0
margin_right = -105.0
margin_bottom = 30.0
text = "Cancel"

[node name="Keyword1" type="Label" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 14.0

[node name="Keyword2" type="Label" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 14.0

[node name="Keyword3" type="Label" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 14.0

[node name="Keyword4" type="Label" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 14.0

[node name="Keyword5" type="Label" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 14.0

[node name="Keyword6" type="Label" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 14.0

[connection signal="timeout" from="HBoxContainer/TimeRemaining/Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="HBoxContainer/ExtendButton" to="." method="_on_ExtendButton_pressed"]
[connection signal="toggled" from="HBoxContainer/Comments" to="." method="_on_Comments_toggled"]
[connection signal="pressed" from="CommentsSection/VBoxContainer/BuzzBack/BuzzBack" to="." method="_on_BuzzBack_pressed"]
[connection signal="pressed" from="CommentsSection/VBoxContainer/LeaveAComment/Submit" to="." method="_on_Submit_pressed"]
[connection signal="pressed" from="CommentsSection/VBoxContainer/LeaveAComment/Cancel" to="." method="_on_Cancel_pressed"]
